--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,4 +1,10 @@
-body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {margin: 0; padding: 0; } body, button, input, select, textarea {font-size: 12px; font-family: "SimSun","宋体","Arial Narrow"; } h1, h2, h3, h4, h5, h6 {font-size: 100%; } small {font-size: 12px; } ul, ol {list-style: none; } a {text-decoration: none; } a:hover {text-decoration: underline; } sup {vertical-align: text-top; } sub {vertical-align: text-bottom; } img {border: 0; } button, input, select, textarea {font-size: 100%; } table {border-collapse: collapse; border-spacing: 0; }
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {margin: 0; padding: 0; } body, button, input, select, textarea {font-size: 12px; font-family: "Open Sans", "宋体", "Arial Narrow"; } h1, h2, h3, h4, h5, h6 {font-size: 100%; } small {font-size: 12px; } ul, ol {list-style: none; } a {text-decoration: none; } a:hover {text-decoration: underline; } sup {vertical-align: text-top; } sub {vertical-align: text-bottom; } img {border: 0; } button, input, select, textarea {font-size: 100%; } table {border-collapse: collapse; border-spacing: 0; }
+
+@charset "utf-8";
+@font-face {font-family: "Open Sans"; src:url("../fonts/OpenSans.ttf"); src: url("../fonts/OpenSans.eot#iefix") format("embedded-opentype"), url("../fonts/OpenSans.woff") format("woff"), url("../fonts/OpenSans.ttf") format("truetype"), url("../fonts/OpenSans.svg#iconfont") format("svg"); } 
+@font-face {font-family: "Open Sans-semiBold"; src: url("../fonts/OpenSans-SemiBold.ttf"); }
+@font-face {font-family: "Open Sans-extraBold"; src: url("../fonts/OpenSans-ExtraBold.ttf"); }
+@font-face {font-family: "Open Sans-Bold"; src: url("../fonts/OpenSans-Bold.ttf"); }
 
 .container {
     width: 1200px;
