--- a/public/css/Admin/login.css
+++ b/public/css/Admin/login.css
@@ -14,7 +14,7 @@
     height: 350px;
     padding: 25px;
     color: #6c6c6c;
-    background: #fff;
+    background: #ffffffe6;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -22,4 +22,47 @@
     margin-left: -200px;
     box-shadow: 4px 4px 10px #333333;
     border: 1px solid #ccc;
+}
+
+.login-box a {
+	display: block;
+	width: 65px;
+	float: left;
+	height: 28px;
+	text-align: center;
+	margin-right: 18px;
+}
+
+.login-box a:hover { 
+	text-decoration: none; 
+} 
+
+.login-box a.select {
+	border-bottom: 2px solid #000;
+}
+
+.login-box .input {
+	width: 328px;
+}
+
+.login-box .btn {
+	color: #fff;
+	background: #f40;
+    border-color: #f40;
+}
+
+.login-box .btn:hover {
+    background-color: #f52b00; 
+}
+
+.poptip-content {
+    color: #ff9000;
+    border: 1px solid #f3d995;
+    padding: 5px 10px;
+    width: 90px;
+    text-align: center;
+    background: #fefcee;
+    position: absolute;
+    right: 50px;
+    top: 4px;
 }
