--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,10 +1,47 @@
-body {
-    font: 12px/1.5 Microsoft YaHei, tahoma, arial, Hiragino Sans GB, \\5B8B\4F53, sans-serif;
-}
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
+body, button, input, select, textarea { font: 12px/1.5 Microsoft YaHei, tahoma, arial, Hiragino Sans GB, \\5B8B\4F53, sans-serif; color: #3c3c3c;} 
+h1, h2, h3, h4, h5, h6{ font-size:100%; } 
+ul, ol { list-style:none; } 
+a { text-decoration:none; color: #3c3c3c;} 
+a:hover { text-decoration:underline; } 
+img { border:0; max-width: 100%; max-height: 100%;} 
+button, input, select, textarea { font-size:100%; } 
+table { border-collapse:collapse; border-spacing:0; }
 
 .container {
     width: 1200px;
     margin: 0 auto;
     position: relative;
     z-index: 1;
+}
+
+.clear {
+    clear: both;
+}
+
+.input {
+    height: 40px;
+    width: 100%;
+    border: 1px solid #f1eeee;
+    padding: 0 10px;
+    font-size: 14px;
+}
+
+.input::placeholder {
+    color: #999;
+}
+
+.input:focus {
+    outline:none;
+}
+
+.btn {
+    border-radius: 4px;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+}
+
+.pointer {
+    cursor: pointer;
 }
