--- a/public/css/common.css
+++ b/public/css/common.css
@@ -8,6 +8,14 @@ img { border:0; max-width: 100%; max-height: 100%;}
 button, input, select, textarea { font-size:100%; } 
 table { border-collapse:collapse; border-spacing:0; }
 
+
+.btn {
+    border-radius: 4px;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
@@ -17,6 +25,10 @@ table { border-collapse:collapse; border-spacing:0; }
 
 .clear {
     clear: both;
+}
+
+.hidden {
+    display: none;
 }
 
 .input {
@@ -35,13 +47,14 @@ table { border-collapse:collapse; border-spacing:0; }
     outline:none;
 }
 
-.btn {
-    border-radius: 4px;
-    text-align: center;
-    height: 40px;
-    line-height: 40px;
+.left {
+    float: left;
 }
 
 .pointer {
     cursor: pointer;
+}
+
+.relative {
+    position: relative;
 }
