--- a/public/css/Admin/common.css
+++ b/public/css/Admin/common.css
@@ -1,3 +1,48 @@
 .container {
 	width: 100%;
 }
+
+#header {
+	width: 100%;
+    height: 35px;
+    background-color: #284F95;
+}
+
+#header .toolbox {
+    display: block;
+    height: 35px;
+    line-height: 45px;
+    padding: 0 10px;
+    text-align: center;
+    cursor: pointer;
+    color: white;
+}
+
+#header .toolbox img {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+}
+
+#header .setting img {
+    transition: 1s;
+}
+
+#header .setting:hover img {
+    transform:rotate(180deg);
+}
+
+#left {
+	width: max-content;
+}
+
+#person {
+	width: 100%;
+	height: 50px;
+}
+
+#click-list {
+	position: absolute;
+	width: 40px;
+	height: calc(100% - 50px - 35px);
+}
