--- a/public/css/common.css
+++ b/public/css/common.css
@@ -7,6 +7,11 @@ a:hover { text-decoration:underline; }
 img { border:0; max-width: 100%; max-height: 100%;} 
 button, input, select, textarea { font-size:100%; } 
 table { border-collapse:collapse; border-spacing:0; }
+html,body {
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
 
 .btn {
     border-radius: 4px;
@@ -16,7 +21,7 @@ table { border-collapse:collapse; border-spacing:0; }
 }
 
 .container {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     position: relative;
     z-index: 1;
@@ -24,6 +29,19 @@ table { border-collapse:collapse; border-spacing:0; }
 
 .clear {
     clear: both;
+}
+
+.color-white {
+    color: #FFF;
+}
+
+.color-red {
+    color: #e7502b;
+}
+
+.ellipsis-1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .hidden {
